logs/bitbucket.log
Listing '.'...
Listing './bin'...
Compiling './bin/bb_example.py'...
***   File "./bin/bb_example.py", line 27
    print 'sync_dir: Empty File - Ignored %s' % fullpath
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/bb_shell.py'...
***   File "./bin/bb_shell.py", line 18
    print 'an error occurred'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/test_filter.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (test_filter.py, line 17)
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BitBucket-0.4a0.egg-info'...
Compiling './lib/python3.5/site-packages/bitbucket.py'...
***   File "./lib/python3.5/site-packages/bitbucket.py", line 66
    print 'filter[%s] - filtering %s' % (self.content_type, bits.filename)
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/s3amazon'...
Compiling './lib/python3.5/site-packages/s3amazon/s3-driver.py'...
***   File "./lib/python3.5/site-packages/s3amazon/s3-driver.py", line 19
    print "update s3-driver.py with your AWS credentials"
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/s3amazon/s3-test.py'...
***   File "./lib/python3.5/site-packages/s3amazon/s3-test.py", line 20
    print "update s3-driver.py with your AWS credentials"
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
